* type=device | actions=display-shadowrule:file.html - improvement to store full rule informtaion into html

BUGFIX:
* type=device | bugfix actions=display-shadowrule:file.html - to export correctly for all DG/vsys
* type=rule ruletype=defaultsecurity | bugfix to read predefined default-security-rules also if xpath post-rulebase is not set

GENERAL


2.0.71 (20230215)
UTIL:
* type=certificate | introduction of new utility script
* type=certificate | extend actions=display
* type=device | actions=display-shadowrule - extend with argument exportToexcel | actions=display-shadowrule:filename.html

BUGFIX:
* type=playbook | bugfix for missing validation of available array_key
* type=ironskilled-update | bugfix as ironskillet zpp has nothing for Alert_Only_Zone_Protection
* type=address-merger | bugfix class Address.php - not handled null validation

GENERAL
* general - update UTIL actions/filter
* update Dockerfiles | split correctly between amd/arm


2.0.70 (20230208)
UTIL:
* type=diff | redesign filter JSON "combinedruleordercheck" feature

BUGFIX:
* type=playbook | bugfix for missing validation of available array_key
* type=ironskilled-update | bugfix as ironskillet zpp has nothing for Alert_Only_Zone_Protection
* type=address-merger | bugfix class Address.php - not handled null validation

GENERAL
* general - update UTIL actions/filter
* update Dockerfiles | split correctly between amd/arm


2.0.69 (20230203)
UTIL:
* type=device | code improvements for actions=sp_spg-create-alert-only-bp/sp_spg-create-bp - reduce duplicate code
* type=rule | improve filters for ruletype=defaultsecurity
* type=overridefinder | improvement of usage message
* type=rule | extend validation for different rule actions and filters
* type=addressgroup-merger allowaddingmissingobjects allowmergingwithupperlevel | improve functionality to add / move missing objects
* type=diff filter=jsonfile.json | improved if combinedruleordercheck is set in JSON